--- a/client/package.json
+++ b/client/package.json
@@ -2,10 +2,12 @@
   "name": "myvolleyball",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:3001/",
+  "proxy": "http://localhost:3001/",
   "dependencies": {
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0"
   },
